# font-lab

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  alembic.ini  requirements.txt
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_data_quality_indexing_audit_trail.py  be68d3d26ac1_initial_schema.py
app/: __init__.py  auth.py  database.py  font_export.py  main.py  models.py  reconstruction.py  repository.py  schemas.py  segmentation.py  taxonomy.py  vectorize.py
app/routes/: __init__.py  catalog.py  editor.py  glyphs.py  images.py  integrations.py  reconstruction.py  taxonomy.py
app/routes/v1/: catalog.py  keys.py
app/static/: index.html
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  index.css
apps/web/src/components/: Layout.module.css  Layout.tsx
apps/web/src/pages/: AdminPage.module.css  AdminPage.tsx  BuildsPage.module.css  BuildsPage.tsx  CatalogPage.module.css  CatalogPage.tsx  GlyphReviewPage.module.css  GlyphReviewPage.tsx  SampleDetailPage.module.css  SampleDetailPage.tsx
crates/api/: Cargo.toml
crates/api/src/: auth.rs  error.rs  main.rs  state.rs
crates/api/src/routes/: catalog.rs  glyphs.rs  keys.rs  mod.rs  samples.rs  taxonomy.rs
crates/application/: Cargo.toml
crates/application/src/: catalog.rs  glyphs.rs  keys.rs  lib.rs  samples.rs
crates/blob_store/: Cargo.toml
crates/blob_store/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  migrate.rs
crates/db/src/repo/: api_keys.rs  audit.rs  builds.rs  glyphs.rs  jobs.rs  mod.rs  samples.rs  search_index.rs  taxonomy.rs
crates/domain/: Cargo.toml
crates/domain/src/: coverage.rs  entities.rs  errors.rs  lib.rs  similarity.rs  slug.rs
crates/font_engine/: Cargo.toml
crates/font_engine/src/: export.rs  lib.rs  reconstruction.rs  vectorize.rs
crates/font_source/: Cargo.toml
crates/font_source/src/: lib.rs
crates/image_core/: Cargo.toml
crates/image_core/src/: crop.rs  lib.rs  threshold.rs
crates/ocr/: Cargo.toml
crates/ocr/src/: lib.rs
crates/segmentation/: Cargo.toml
crates/segmentation/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
docs/: codebase-rebuild.md  database.md  integration-guide.md  tagging-guidelines.md  target-architecture.md
fixtures/fonts/: README.md
fixtures/samples/: README.md
scripts/: seed_taxonomy.py
tests/: __init__.py  conftest.py  test_catalog.py  test_database.py  test_editor.py  test_glyphs.py  test_images.py  test_integrations.py  test_reconstruction.py  test_taxonomy.py  test_v1_auth.py  test_v1_catalog.py
