[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/application",
    "crates/blob_store",
    "crates/cli",
    "crates/db",
    "crates/domain",
    "crates/font_engine",
    "crates/font_source",
    "crates/image_core",
    "crates/ocr",
    "crates/segmentation",
    "crates/worker",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Image processing
image = "0.25"

# Font processing
write-fonts = "0.38"
read-fonts = "0.29"
norad = "0.18"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
rand = "0.9"
base64 = "0.22"
regex = "1"

# Testing
tempfile = "3"
