[package]
name = "font-lab-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "font-lab-api"
path = "src/main.rs"

[dependencies]
font-lab-domain = { path = "../domain" }
font-lab-db = { path = "../db" }
font-lab-blob-store = { path = "../blob_store" }
font-lab-application = { path = "../application" }
font-lab-font-engine = { path = "../font_engine" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
