[package]
name = "font-lab-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "font-lab-cli"
path = "src/main.rs"

[dependencies]
font-lab-domain = { path = "../domain" }
font-lab-db = { path = "../db" }
font-lab-blob-store = { path = "../blob_store" }
font-lab-application = { path = "../application" }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
