[package]
name = "font-lab-db"
version.workspace = true
edition.workspace = true

[dependencies]
font-lab-domain = { path = "../domain" }
sqlx = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
