[package]
name = "font-lab-domain"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
