[package]
name = "font-lab-font-engine"
version.workspace = true
edition.workspace = true

[dependencies]
font-lab-image-core = { path = "../image_core" }
image = { workspace = true }
thiserror = { workspace = true }
write-fonts = { workspace = true }
read-fonts = { workspace = true }
uuid = { workspace = true }
