[package]
name = "font-lab-worker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "font-lab-worker"
path = "src/main.rs"

[dependencies]
font-lab-domain = { path = "../domain" }
font-lab-db = { path = "../db" }
font-lab-blob-store = { path = "../blob_store" }
font-lab-application = { path = "../application" }
font-lab-segmentation = { path = "../segmentation" }
font-lab-font-engine = { path = "../font_engine" }
font-lab-ocr = { path = "../ocr" }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
